# CompilerConstruction_Lab

./: .gitignore  CMakeLists.txt  README.md
Lab/Lab_01/Practice Task/: Practice_Task_Even_a_Odd_b.cpp  Practice_Task_goto.cpp
Lab/Lab_01/PracticeTask/: Practice_Task_switch.cpp
Lab/Lab_01/Task1/: Task_1_goto.cpp  Task_1_switch.cpp
Lab/Lab_01/Task2/: Task_2_goto.cpp  Task_2_switch.cpp
Lab/Lab_02/Task/: lexer.cpp  output.tiny
Lab/Lab_03/Task/: input.tiny  output.tiny  scanner.cpp
Lab/Lab_04/Task/: recursive_parsing.cpp
Lab/Lab_05/Task/: recursive_parser2.cpp
